fix: change letter spacing for navigation

--- a/apps/frontend/src/common/header/navigation-menu/navigation-items/NavigationItems.module.scss
+++ b/apps/frontend/src/common/header/navigation-menu/navigation-items/NavigationItems.module.scss
@@ -18,7 +18,6 @@
 		color: $color__basic-900;
 		font-size: rem(11);
 		font-weight: $font-weight__semi-bold;
-		letter-spacing: rem(1.5);
 		padding: rem(2) rem(12);
 		position: relative;
 		text-decoration: none;
